# umsl-cmp-sci-4500-project-snapshot-2019-04-12

./: CMakeLists.txt  main.c
python/cozmonaut/: core.py
src/: engine.cpp  engine.h  engine_op.h  global.cpp  global.h  main.c  main.cpp  version.h
src/engine_op/: list_friend_op.cpp  list_friend_op.h  remove_friend_op.cpp  remove_friend_op.h  start_interactive_op.cpp  start_interactive_op.h
